# ChangeLog for x11-misc/idesk-extras
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/idesk-extras/ChangeLog,v 1.6 2014/08/10 17:38:06 ago Exp $

  10 Aug 2014; Agostino Sarubbo <ago@gentoo.org> idesk-extras-1.37-r1.ebuild:
  Stable for x86, wrt bug #518216

  30 Jul 2014; Chema Alonso <nimiux@gentoo.org> idesk-extras-1.37-r1.ebuild:
  Stable for amd64 wrt bug #518216

*idesk-extras-1.37-r1 (06 Oct 2013)

  06 Oct 2013; Julian Ospald <hasufell@gentoo.org>
  +idesk-extras-1.37-r1.ebuild, +files/idesk-extras-1.37-stdout.patch:
  revbump (patch: fix stderr mess)

  20 Jun 2012; Agostino Sarubbo <ago@gentoo.org> idesk-extras-1.37.ebuild:
  Stable for amd64, wrt bug #422475

  20 Jun 2012; Jeff Horelick <jdhore@gentoo.org> idesk-extras-1.37.ebuild:
  marked x86 per bug 422475

*idesk-extras-1.37 (03 May 2012)

  03 May 2012; Julian Ospald <hasufell@gentoo.org> +idesk-extras-1.37.ebuild,
  +metadata.xml:
  initial commit wrt #406675