@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-  <maintainer>
-	  <email>hasufell@gentoo.org</email>
-	  <name>Julian Ospald</name>
-  </maintainer>
+	<maintainer>
+		<email>maintainer-needed@gentoo.org</email>
+	</maintainer>
 </pkgmetadata>
